# cta button icon is now optional # remove tiles item top spacing # fix wrong font weight of sub nav item description # fix wrong color of team mail addresses # headline addition is optional # open supporters link in different tab

--- a/statamic/resources/css/sites/general.css
+++ b/statamic/resources/css/sites/general.css
@@ -237,7 +237,6 @@ section {
 }
 
 .tiles_item {
-  margin-top: var(--root80px);
   display: inline-block;
   text-align: center;
 }
